gen/dk/aau/p4/abaaja/mctlParser.java
// Generated from java-escape by ANTLR 4.11.1
package dk.aau.p4.abaaja;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class mctlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		EQUAL=1, NOTEQUAL=2, LESS=3, LESSEQUAL=4, GREATER=5, GREATEREQUAL=6, DOT=7, 
		COMMA=8, MULTIPLY=9, DIVIDE=10, MODULO=11, DECREMENT=12, INCREMENT=13, 
		MINUS=14, PLUS=15, ASSIGN=16, LPAR=17, RPAR=18, LSQR=19, RSQR=20, LCURL=21, 
		RCURL=22, STRING=23, COLON=24, SEMI=25, NOT=26, Nothing=27, String=28, 
		Number=29, Boolean=30, Struct=31, True=32, False=33, Add=34, IndexesOf=35, 
		SubString=36, SubList=37, And=38, Or=39, Stop=40, Return=41, To=42, Variable=43, 
		If=44, Else=45, Repeat=46, ID=47, NUMBER=48, COMMENT=49, WS=50;
	public static final int
		RULE_mctl = 0, RULE_block = 1, RULE_declaration = 2, RULE_variableDeclaration = 3, 
		RULE_id = 4, RULE_statement = 5, RULE_return = 6, RULE_if = 7, RULE_ifLiteral = 8, 
		RULE_repeat = 9, RULE_assignment = 10, RULE_invoke = 11, RULE_formalParameters = 12, 
		RULE_formalParameter = 13, RULE_actualParameters = 14, RULE_expression = 15, 
		RULE_returnType = 16, RULE_variableType = 17, RULE_baseVariableType = 18, 
		RULE_boolean = 19;
	private static String[] makeRuleNames() {
		return new String[] {
			"mctl", "block", "declaration", "variableDeclaration", "id", "statement", 
			"return", "if", "ifLiteral", "repeat", "assignment", "invoke", "formalParameters", 
			"formalParameter", "actualParameters", "expression", "returnType", "variableType", 
			"baseVariableType", "boolean"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", "'.'", "','", "'*'", 
			"'/'", "'%'", "'--'", "'++'", "'-'", "'+'", "'='", "'('", "')'", "'['", 
			"']'", "'{'", "'}'", null, "':'", "';'", "'!'", "'NOTHING'", "'STRING'", 
			"'NUMBER'", "'BOOLEAN'", "'struct'", "'true'", "'false'", "'add'", "'indexesOf'", 
			"'subString'", "'subList'", "'and'", "'or'", "'stop'", "'return'", "'to'", 
			"'variable'", "'if'", "'else'", "'repeat'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "EQUAL", "NOTEQUAL", "LESS", "LESSEQUAL", "GREATER", "GREATEREQUAL", 
			"DOT", "COMMA", "MULTIPLY", "DIVIDE", "MODULO", "DECREMENT", "INCREMENT", 
			"MINUS", "PLUS", "ASSIGN", "LPAR", "RPAR", "LSQR", "RSQR", "LCURL", "RCURL", 
			"STRING", "COLON", "SEMI", "NOT", "Nothing", "String", "Number", "Boolean", 
			"Struct", "True", "False", "Add", "IndexesOf", "SubString", "SubList", 
			"And", "Or", "Stop", "Return", "To", "Variable", "If", "Else", "Repeat", 
			"ID", "NUMBER", "COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public mctlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MctlContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(mctlParser.EOF, 0); }
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<TerminalNode> COMMENT() { return getTokens(mctlParser.COMMENT); }
		public TerminalNode COMMENT(int i) {
			return getToken(mctlParser.COMMENT, i);
		}
		public List<TerminalNode> SEMI() { return getTokens(mctlParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(mctlParser.SEMI, i);
		}
		public MctlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mctl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mctlListener ) ((mctlListener)listener).enterMctl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mctlListener ) ((mctlListener)listener).exitMctl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof mctlVisitor ) return ((mctlVisitor<? extends T>)visitor).visitMctl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MctlContext mctl() throws RecognitionException {
		MctlContext _localctx = new MctlContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_mctl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((_la) & ~0x3f) == 0 && ((1L << _la) & 808143227453440L) != 0) {
				{
				setState(44);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case Struct:
				case To:
				case Variable:
					{
					setState(40);
					declaration();
					}
					break;
				case Stop:
				case Return:
				case If:
				case Repeat:
				case ID:
					{
					setState(41);
					statement();
					}
					break;
				case COMMENT:
					{
					setState(42);
					match(COMMENT);
					}
					break;
				case SEMI:
					{
					setState(43);
					match(SEMI);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(48);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(49);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlockContext extends ParserRuleContext {
		public TerminalNode LCURL() { return getToken(mctlParser.LCURL, 0); }
		public TerminalNode RCURL() { return getToken(mctlParser.RCURL, 0); }
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<TerminalNode> COMMENT() { return getTokens(mctlParser.COMMENT); }
		public TerminalNode COMMENT(int i) {
			return getToken(mctlParser.COMMENT, i);
		}
		public List<TerminalNode> SEMI() { return getTokens(mctlParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(mctlParser.SEMI, i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mctlListener ) ((mctlListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mctlListener ) ((mctlListener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof mctlVisitor ) return ((mctlVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			match(LCURL);
			setState(58);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((_la) & ~0x3f) == 0 && ((1L << _la) & 808143227453440L) != 0) {
				{
				setState(56);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case Struct:
				case To:
				case Variable:
					{
					setState(52);
					declaration();
					}
					break;
				case Stop:
				case Return:
				case If:
				case Repeat:
				case ID:
					{
					setState(53);
					statement();
					}
					break;
				case COMMENT:
					{
					setState(54);
					match(COMMENT);
					}
					break;
				case SEMI:
					{
					setState(55);
					match(SEMI);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(60);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(61);
			match(RCURL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationContext extends ParserRuleContext {
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
	 
		public DeclarationContext() { }
		public void copyFrom(DeclarationContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StructDeclarationContext extends DeclarationContext {
		public TerminalNode Struct() { return getToken(mctlParser.Struct, 0); }
		public TerminalNode ID() { return getToken(mctlParser.ID, 0); }
		public TerminalNode LCURL() { return getToken(mctlParser.LCURL, 0); }
		public List<VariableDeclarationContext> variableDeclaration() {
			return getRuleContexts(VariableDeclarationContext.class);
		}
		public VariableDeclarationContext variableDeclaration(int i) {
			return getRuleContext(VariableDeclarationContext.class,i);
		}
		public TerminalNode RCURL() { return getToken(mctlParser.RCURL, 0); }
		public List<TerminalNode> COMMA() { return getTokens(mctlParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(mctlParser.COMMA, i);
		}
		public StructDeclarationContext(DeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mctlListener ) ((mctlListener)listener).enterStructDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mctlListener ) ((mctlListener)listener).exitStructDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof mctlVisitor ) return ((mctlVisitor<? extends T>)visitor).visitStructDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class VarDeclContext extends DeclarationContext {
		public VariableDeclarationContext variableDeclaration() {
			return getRuleContext(VariableDeclarationContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(mctlParser.SEMI, 0); }
		public VarDeclContext(DeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mctlListener ) ((mctlListener)listener).enterVarDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mctlListener ) ((mctlListener)listener).exitVarDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof mctlVisitor ) return ((mctlVisitor<? extends T>)visitor).visitVarDecl(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FunctionDeclarationContext extends DeclarationContext {
		public TerminalNode To() { return getToken(mctlParser.To, 0); }
		public TerminalNode ID() { return getToken(mctlParser.ID, 0); }
		public TerminalNode LPAR() { return getToken(mctlParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(mctlParser.RPAR, 0); }
		public TerminalNode COLON() { return getToken(mctlParser.COLON, 0); }
		public ReturnTypeContext returnType() {
			return getRuleContext(ReturnTypeContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public FormalParametersContext formalParameters() {
			return getRuleContext(FormalParametersContext.class,0);
		}
		public FunctionDeclarationContext(DeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mctlListener ) ((mctlListener)listener).enterFunctionDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mctlListener ) ((mctlListener)listener).exitFunctionDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof mctlVisitor ) return ((mctlVisitor<? extends T>)visitor).visitFunctionDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaration);
		int _la;
		try {
			int _alt;
			setState(93);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Variable:
				_localctx = new VarDeclContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(63);
				variableDeclaration();
				setState(64);
				match(SEMI);
				}
				break;
			case To:
				_localctx = new FunctionDeclarationContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(66);
				match(To);
				setState(67);
				match(ID);
				setState(68);
				match(LPAR);
				setState(70);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ID) {
					{
					setState(69);
					formalParameters();
					}
				}

				setState(72);
				match(RPAR);
				setState(73);
				match(COLON);
				setState(74);
				returnType();
				setState(75);
				block();
				}
				break;
			case Struct:
				_localctx = new StructDeclarationContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(77);
				match(Struct);
				setState(78);
				match(ID);
				setState(79);
				match(LCURL);
				setState(80);
				variableDeclaration();
				setState(85);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(81);
						match(COMMA);
						setState(82);
						variableDeclaration();
						}
						} 
					}
					setState(87);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
				}
				setState(89);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==COMMA) {
					{
					setState(88);
					match(COMMA);
					}
				}

				setState(91);
				match(RCURL);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VariableDeclarationContext extends ParserRuleContext {
		public TerminalNode Variable() { return getToken(mctlParser.Variable, 0); }
		public TerminalNode ID() { return getToken(mctlParser.ID, 0); }
		public TerminalNode COLON() { return getToken(mctlParser.COLON, 0); }
		public VariableTypeContext variableType() {
			return getRuleContext(VariableTypeContext.class,0);
		}
		public VariableDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mctlListener ) ((mctlListener)listener).enterVariableDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mctlListener ) ((mctlListener)listener).exitVariableDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof mctlVisitor ) return ((mctlVisitor<? extends T>)visitor).visitVariableDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableDeclarationContext variableDeclaration() throws RecognitionException {
		VariableDeclarationContext _localctx = new VariableDeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_variableDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(Variable);
			setState(96);
			match(ID);
			setState(97);
			match(COLON);
			setState(98);
			variableType();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IdContext extends ParserRuleContext {
		public IdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_id; }
	 
		public IdContext() { }
		public void copyFrom(IdContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class IdArrayContext extends IdContext {
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public List<TerminalNode> LSQR() { return getTokens(mctlParser.LSQR); }
		public TerminalNode LSQR(int i) {
			return getToken(mctlParser.LSQR, i);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<TerminalNode> RSQR() { return getTokens(mctlParser.RSQR); }
		public TerminalNode RSQR(int i) {
			return getToken(mctlParser.RSQR, i);
		}
		public IdArrayContext(IdContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mctlListener ) ((mctlListener)listener).enterIdArray(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mctlListener ) ((mctlListener)listener).exitIdArray(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof mctlVisitor ) return ((mctlVisitor<? extends T>)visitor).visitIdArray(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class IdStructContext extends IdContext {
		public List<IdContext> id() {
			return getRuleContexts(IdContext.class);
		}
		public IdContext id(int i) {
			return getRuleContext(IdContext.class,i);
		}
		public TerminalNode DOT() { return getToken(mctlParser.DOT, 0); }
		public IdStructContext(IdContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mctlListener ) ((mctlListener)listener).enterIdStruct(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mctlListener ) ((mctlListener)listener).exitIdStruct(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof mctlVisitor ) return ((mctlVisitor<? extends T>)visitor).visitIdStruct(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class IdVarContext extends IdContext {
		public TerminalNode ID() { return getToken(mctlParser.ID, 0); }
		public IdVarContext(IdContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mctlListener ) ((mctlListener)listener).enterIdVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mctlListener ) ((mctlListener)listener).exitIdVar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof mctlVisitor ) return ((mctlVisitor<? extends T>)visitor).visitIdVar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdContext id() throws RecognitionException {
		return id(0);
	}

	private IdContext id(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		IdContext _localctx = new IdContext(_ctx, _parentState);
		IdContext _prevctx = _localctx;
		int _startState = 8;
		enterRecursionRule(_localctx, 8, RULE_id, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new IdVarContext(_localctx);
			_ctx = _localctx;
			_prevctx = _localctx;

			setState(101);
			match(ID);
			}
			_ctx.stop = _input.LT(-1);
			setState(117);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(115);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
					case 1:
						{
						_localctx = new IdStructContext(new IdContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_id);
						setState(103);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(104);
						match(DOT);
						setState(105);
						id(3);
						}
						break;
					case 2:
						{
						_localctx = new IdArrayContext(new IdContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_id);
						setState(106);
						if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
						setState(111); 
						_errHandler.sync(this);
						_alt = 1;
						do {
							switch (_alt) {
							case 1:
								{
								{
								setState(107);
								match(LSQR);
								setState(108);
								expression(0);
								setState(109);
								match(RSQR);
								}
								}
								break;
							default:
								throw new NoViableAltException(this);
							}
							setState(113); 
							_errHandler.sync(this);
							_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
						} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
						}
						break;
					}
					} 
				}
				setState(119);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public IfContext if_() {
			return getRuleContext(IfContext.class,0);
		}
		public RepeatContext repeat() {
			return getRuleContext(RepeatContext.class,0);
		}
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(mctlParser.SEMI, 0); }
		public InvokeContext invoke() {
			return getRuleContext(InvokeContext.class,0);
		}
		public TerminalNode Stop() { return getToken(mctlParser.Stop, 0); }
		public ReturnContext return_() {
			return getRuleContext(ReturnContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mctlListener ) ((mctlListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mctlListener ) ((mctlListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof mctlVisitor ) return ((mctlVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_statement);
		try {
			setState(133);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(120);
				if_();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(121);
				repeat();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(122);
				assignment();
				setState(123);
				match(SEMI);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(125);
				invoke();
				setState(126);
				match(SEMI);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(128);
				match(Stop);
				setState(129);
				match(SEMI);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(130);
				return_();
				setState(131);
				match(SEMI);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ReturnContext extends ParserRuleContext {
		public TerminalNode Return() { return getToken(mctlParser.Return, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ReturnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_return; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mctlListener ) ((mctlListener)listener).enterReturn(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mctlListener ) ((mctlListener)listener).exitReturn(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof mctlVisitor ) return ((mctlVisitor<? extends T>)visitor).visitReturn(this);
			else return visitor.visitChildren(this);
		}
	}
